# good_first_rust

./: Cargo.toml  README.md
.github/workflows/: build.yml
src/: db.rs  github_api.rs  main.rs  models.rs  server.rs
static/: index.html
